update: comentários nas telas Agendamento, AgendarExame e AgendarVacina

--- a/LabProject/src/telas/telaAdmin.form
+++ b/LabProject/src/telas/telaAdmin.form
@@ -139,7 +139,7 @@
         </Constraint>
       </Constraints>
     </Component>
-    <Component class="javax.swing.JLabel" name="backgroundLogin">
+    <Component class="javax.swing.JLabel" name="background">
       <Properties>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/imagens/backgroundCor.png"/>
