fix: small fix on editable fields of telaContaFuncionario

--- a/LabProject/src/telas/telaContaFuncionario.form
+++ b/LabProject/src/telas/telaContaFuncionario.form
@@ -211,6 +211,9 @@
           <Font name="Helvetica Neue" size="14" style="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtDataActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JFormattedTextField" name="txtCpf">
       <Properties>
@@ -231,6 +234,9 @@
           <Font name="Helvetica Neue" size="14" style="0"/>
         </Property>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="txtCpfActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JPasswordField" name="txtSenha">
       <Properties>
