--- a/LabProject/src/telas/telaAplicarVacina.form
+++ b/LabProject/src/telas/telaAplicarVacina.form
@@ -373,14 +373,14 @@
             <DimensionLayout dim="0">
               <Group type="103" groupAlignment="0" attributes="0">
                   <Group type="102" alignment="1" attributes="0">
-                      <EmptySpace min="-2" pref="28" max="-2" attributes="0"/>
+                      <EmptySpace pref="61" max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="1" max="-2" attributes="0">
                           <Component id="btnVoltar" max="32767" attributes="0"/>
                           <Component id="btnAplicarVacina" max="32767" attributes="0"/>
                           <Component id="btnCartaoVacina" alignment="0" max="32767" attributes="0"/>
-                          <Component id="btnConcluir" alignment="0" max="32767" attributes="0"/>
+                          <Component id="btnConcluir" alignment="0" min="-2" pref="226" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="39" max="-2" attributes="0"/>
+                      <EmptySpace max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
